Remove pure-css dependency due to layout bugs

--- a/homepage/assets/style.css
+++ b/homepage/assets/style.css
@@ -6,8 +6,13 @@ html {
     font-weight: lighter;
     font-size: 14px;
     line-height: 1.7;
+    text-rendering: auto;
     /* Prevents page from jumping / moving when scrollbar appears */
     margin-right: calc(100vw - 100%);
+}
+
+body {
+    margin: 0;
 }
 
 div, p {
@@ -18,6 +23,12 @@ h1, h2, h3 {
     color: #666;
     font-family: 'GeosansLight', sans-serif;
     font-weight: lighter;
+    font-size: 1.8em;
+    margin: 0.1em 0;
+}
+
+h1 {
+    font-size: 2.4em;
 }
 
 ::selection {
@@ -82,6 +93,13 @@ p {
     transition: all 0.2s ease-out;
 }
 
+#body {
+    width: 100%;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
 
 #title {
     position: relative;
@@ -90,12 +108,18 @@ p {
 #navigation {
     position: relative;
     vertical-align: top;
+    width: 100%;
+
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
 }
 
 #content {
     position: relative;
     vertical-align: top;
-    margin-top: -15px;
+    width: 100%;
 }
 
 
@@ -104,8 +128,20 @@ p {
         padding-left: 10px;
     }
 
+    #body {
+        -webkit-flex-direction: row;
+        flex-direction: row;
+    }
+
     #navigation {
-        margin-top: 15px;
+        margin-top: 10px;
+        width: 170px;
+        -webkit-flex-direction: column;
+        flex-direction: column;
+    }
+
+    #content {
+        width: calc(100% - 170px);
     }
 }
 
@@ -114,7 +150,17 @@ p {
  * Navigation
  * ---------- */
 
-.custom-menu-item {
+.menu-list {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    line-height: 1.7;
+}
+
+.menu-item {
+    display: inline;
     width: 120px;
     padding: 0;
     margin: 0;
@@ -123,58 +169,54 @@ p {
 }
 
 
-.custom-menu-link {
+.menu-link {
     font-family: monospace;
     color: #444;
     text-decoration: none;
     line-height: 2.2;
 }
 
-.custom-menu-link:focus {
+.menu-link:focus {
 
 }
 
-.custom-menu-link:link {
+.menu-link:link {
     color: #666;
     fill: #666;
 }
 
-.custom-menu-link:visited {
+.menu-link:visited {
 }
 
-.custom-menu-link:hover {
+.menu-link:hover {
     font-weight: bold;
 }
 
-.custom-menu-link:active {
+.menu-link:active {
 
 }
 
-.custom-menu-link:before {
+.menu-link:before {
     content: "// ";
 }
 
-.custom-menu-link.selected {
+.menu-link.selected {
     font-weight: bold;
     text-decoration: underline;
 }
 
 /* Transform menu into horizontal menu */
-@media all and (max-width: 64em) {
-    .custom-menu {
-        width: 100%;
-        white-space: nowrap;
-    }
-
+@media all and (min-width: 28em) {
     .menu-item {
-        display: inline-block;
+        width: inherit;
+        padding: 5px;
     }
 }
 
-@media all and (min-width: 28em) {
-    .custom-menu-item {
-        width: inherit;
-        padding: 5px;
+@media all and (min-width: 64em) {
+    .menu-item {
+        display: inline-block;
+        padding: 0;
     }
 }
 
@@ -185,16 +227,16 @@ p {
  * ----- */
 
 .title-name {
-    font-size: 38px;
+    font-size: 22px;
     font-family: 'GeosansLight', sans-serif;
     color: #666;
     line-height: 2;
+    text-align: center;
 }
 
 .title-social {
-    position: absolute;
-    right: 0;
-    bottom: 0;
+    position: relative;
+    text-align: center;
 }
 
 .title-line {
@@ -205,7 +247,7 @@ p {
     max-width: 64px;
     max-height: 64px;
     display: inline-block;
-    margin: 10px;
+    margin: 3px;
 }
 
 .icon a {
@@ -223,24 +265,25 @@ p {
     fill: #444;
 }
 
-@media all and (max-width: 64em) {
+@media all and (min-width: 64em) {
     .title-name {
-        font-size: 22px;
+        font-size: 38px;
     }
 
     .icon {
-        margin: 3px;
+        margin: 10px;
     }
 }
 
-@media all and (max-width: 28em) {
+@media all and (min-width: 28em) {
     .title-social {
-        position: relative;
-        text-align: center;
+        position: absolute;
+        right: 0;
+        bottom: 0;
     }
 
     .title-name {
-        text-align: center;
+        text-align: left;
     }
 }
 
@@ -251,20 +294,19 @@ p {
 
 .profile-picture {
     box-sizing: border-box;
-    padding-right: 2em;
+    padding-right: 0;
+    width: 25%;
 }
 
-@media all and (max-width: 64em) {
+@media all and (min-width: 64em) {
     .profile-picture {
-        box-sizing: border-box;
-        padding-right: 1em;
+        padding-right: 2em;
     }
 }
 
-@media all and (max-width: 28em) {
+@media all and (min-width: 28em) {
     .profile-picture {
-        box-sizing: border-box;
-        padding-right: 0;
+        padding-right: 1em;
     }
 }
 
@@ -302,12 +344,19 @@ p {
     margin-top: 1.5em;
 }
 
-.project-text {
+.project-abstract {
     padding: 0 10px;
 }
 
 .project-text > h1 {
     font-size: 1.5em;
+}
+
+@media all and (min-width: 64em) {
+    .project-entry {
+        -webkit-flex-direction: column;
+        flex-direction: column;
+    }
 }
 
 /* ---
@@ -323,6 +372,20 @@ p {
 /* -------
  * Utility
  * ------- */
+
+.row {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+}
+
+.responsive-img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
 
 .noselect {
     -webkit-touch-callout: none;
